--- a/www/index.html
+++ b/www/index.html
@@ -4,52 +4,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-    <script>
-        let comments = []; // Store comments locally for simplicity
-
-        function postComment() {
-            const commentBox = document.getElementById('commentBox');
-            const commentList = document.getElementById('commentList');
-            const comment = commentBox.value.trim();
-            if (comment) {
-                comments.push(comment);
-                commentBox.value = ''; // Clear input box
-                renderComments();
-            }
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
         }
-
-        function deleteComment(index) {
-            comments.splice(index, 1);
-            renderComments();
+        .comment-section {
+            margin-top: 20px;
         }
-
-        function renderComments() {
-            const commentList = document.getElementById('commentList');
-            commentList.innerHTML = ''; // Clear existing comments
-            comments.forEach((comment, index) => {
-                const commentItem = document.createElement('li');
-                commentItem.innerHTML = `
-                    ${comment}
-                    <button onclick="deleteComment(${index})">Delete</button>
-                `;
-                commentList.appendChild(commentItem);
-            });
+        .comment {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
         }
-    </script>
+        .comment button {
+            margin-top: 10px;
+            padding: 5px 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to the Main Page</h1>
+    <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" placeholder="Enter your name">
+    </div>
+    <div>
+        <label for="comment">Comment:</label>
+        <textarea id="comment" placeholder="Leave a comment"></textarea>
+    </div>
+    <button onclick="addComment()">Submit Comment</button>
 
-    <!-- Picture -->
-    <img src="picture.jpg" alt="Picture" style="max-width: 100%; height: auto;">
+    <h2>Upload File</h2>
+    <form id="uploadForm" enctype="multipart/form-data" method="POST">
+        <input type="file" id="fileInput" name="file">
+        <button type="submit">Upload</button>
+    </form>
 
     <h2>Comments</h2>
-    <textarea id="commentBox" placeholder="Write your comment here..."></textarea>
-    <br>
-    <button onclick="postComment()">Post Comment</button>
-    <ul id="commentList"></ul>
+    <div id="commentsContainer" class="comment-section"></div>
 
-    <h2>File Upload/Download</h2>
-    <a href="upload.html">Go to Upload/Download Page</a>
+    <button onclick="goToLogPage()">Go to Log Page</button>
+
+    <script>
+        // Store comments in memory
+        const comments = [];
+
+        // Function to add a comment
+        function addComment() {
+            const name = document.getElementById('name').value.trim();
+            const comment = document.getElementById('comment').value.trim();
+
+            if (!name || !comment) {
+                alert("Please provide both name and comment.");
+                return;
+            }
+
+            const commentObject = { name, comment };
+            comments.push(commentObject);
+            displayComments();
+            clearInputFields();
+        }
+
+        // Function to display comments
+        function displayComments() {
+            const commentsContainer = document.getElementById('commentsContainer');
+            commentsContainer.innerHTML = '';
+
+            comments.forEach((comment, index) => {
+                const commentDiv = document.createElement('div');
+                commentDiv.className = 'comment';
+                commentDiv.innerHTML = `
+                    <strong>${comment.name}</strong>
+                    <p>${comment.comment}</p>
+                    <button onclick="deleteComment(${index})">Delete</button>
+                `;
+                commentsContainer.appendChild(commentDiv);
+            });
+        }
+
+        // Function to delete a comment
+        function deleteComment(index) {
+            comments.splice(index, 1);
+            displayComments();
+        }
+
+        // Function to clear input fields
+        function clearInputFields() {
+            document.getElementById('name').value = '';
+            document.getElementById('comment').value = '';
+        }
+
+        // Function to navigate to the log page
+        function goToLogPage() {
+            // Store comments in session storage for the log page
+            sessionStorage.setItem('comments', JSON.stringify(comments));
+            window.location.href = 'log.html';
+        }
+
+        // Handle file upload form submission
+        document.getElementById('uploadForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+            const formData = new FormData(this);
+            fetch('/upload', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.text())
+            .then(data => {
+                alert("File uploaded successfully!");
+                console.log(data);
+            })
+            .catch(error => {
+                alert("Error uploading file.");
+                console.error(error);
+            });
+        });
+    </script>
 </body>
 </html>
