--- a/www/index.html
+++ b/www/index.html
@@ -1,131 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            line-height: 1.6;
-        }
-        .comment-section {
-            margin-top: 20px;
-        }
-        .comment {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-        }
-        .comment button {
-            margin-top: 10px;
-            padding: 5px 10px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Welcome to the Main Page</h1>
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" placeholder="Enter your name">
-    </div>
-    <div>
-        <label for="comment">Comment:</label>
-        <textarea id="comment" placeholder="Leave a comment"></textarea>
-    </div>
-    <button onclick="addComment()">Submit Comment</button>
-
-    <h2>Upload File</h2>
-    <form id="uploadForm" enctype="multipart/form-data" method="POST">
-        <input type="file" id="fileInput" name="file">
-        <button type="submit">Upload</button>
-    </form>
-
-    <h2>Comments</h2>
-    <div id="commentsContainer" class="comment-section"></div>
-
-    <button onclick="goToLogPage()">Go to Log Page</button>
-
-    <script>
-        // Store comments in memory
-        const comments = [];
-
-        // Function to add a comment
-        function addComment() {
-            const name = document.getElementById('name').value.trim();
-            const comment = document.getElementById('comment').value.trim();
-
-            if (!name || !comment) {
-                alert("Please provide both name and comment.");
-                return;
-            }
-
-            const commentObject = { name, comment };
-            comments.push(commentObject);
-            displayComments();
-            clearInputFields();
-        }
-
-        // Function to display comments
-        function displayComments() {
-            const commentsContainer = document.getElementById('commentsContainer');
-            commentsContainer.innerHTML = '';
-
-            comments.forEach((comment, index) => {
-                const commentDiv = document.createElement('div');
-                commentDiv.className = 'comment';
-                commentDiv.innerHTML = `
-                    <strong>${comment.name}</strong>
-                    <p>${comment.comment}</p>
-                    <button onclick="deleteComment(${index})">Delete</button>
-                `;
-                commentsContainer.appendChild(commentDiv);
-            });
-        }
-
-        // Function to delete a comment
-        function deleteComment(index) {
-            comments.splice(index, 1);
-            displayComments();
-        }
-
-        // Function to clear input fields
-        function clearInputFields() {
-            document.getElementById('name').value = '';
-            document.getElementById('comment').value = '';
-        }
-
-        // Function to navigate to the log page
-        function goToLogPage() {
-            // Store comments in session storage for the log page
-            sessionStorage.setItem('comments', JSON.stringify(comments));
-            window.location.href = 'log.html';
-        }
-
-        // Handle file upload form submission
-        document.getElementById('uploadForm').addEventListener('submit', function (e) {
-            e.preventDefault();
-            const formData = new FormData(this);
-            fetch('/upload', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.text())
-            .then(data => {
-                alert("File uploaded successfully!");
-                console.log(data);
-            })
-            .catch(error => {
-                alert("Error uploading file.");
-                console.error(error);
-            });
-        });
-    </script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -171,6 +43,15 @@
     <button onclick="uploadFileChunked()">Upload in Chunks</button>
   </div>
   <div id="uploadStatus"></div>
+  <h2>CGI Interactions</h2>
+  <div class="button-section">
+    <label for="calcInput">Calculator Input:</label>
+    <input type="text" id="calcInput" placeholder="e.g., 2+2" />
+    <button onclick="callCalculatorCGI()">Calculate</button>
+    <label for="helloInput">Hello Input:</label>
+    <input type="text" id="helloInput" placeholder="Enter your name" />
+    <button onclick="callHelloCGI()">Say Hello</button>
+  </div>
   <h2>Comments</h2>
   <div id="commentsContainer" class="comment-section"></div>
   <button onclick="goToLogPage()">Go to Log Page</button>
@@ -218,7 +99,6 @@
       sessionStorage.setItem('comments', JSON.stringify(comments));
       window.location.href = 'log.html';
     }
-
     // ------------------------------
     //   CHUNKED UPLOAD FUNCTION
     // ------------------------------
@@ -228,49 +108,39 @@
     let file;
     let totalSize;
     let fileName;
-
     function uploadFileChunked() {
       const fileInput = document.getElementById("fileInput");
       if (!fileInput.files.length) {
         alert("Please select a file before uploading.");
         return;
       }
-
       file = fileInput.files[0];
       totalSize = file.size;
       fileName = file.name;
       const statusDiv = document.getElementById("uploadStatus");
       statusDiv.innerHTML = `Preparing to upload "${file.name}"...`;
-
       offset = 0; // Reset offset for each new upload
-
       // Send a single POST request with all chunks
       sendChunks();
     }
-
     // Function to send all chunks in one request
     async function sendChunks() {
       const statusDiv = document.getElementById("uploadStatus");
       const formData = new FormData();
       const headers = new Headers();
-
       // Add metadata to headers
       headers.append("fileName", fileName);
       headers.append("totalSize", totalSize);
-
       // Loop through file and append chunks to FormData
       while (offset < totalSize) {
         const start = offset;
         const end = Math.min(start + CHUNK_SIZE, totalSize);
         const chunk = file.slice(start, end);
-
         if (chunk.size > 0) { // Only append file chunks that contain data
           formData.append("fileChunk", chunk, file.name);
         }
-
         offset += CHUNK_SIZE; // Update offset for the next chunk
       }
-
       // Send the entire file and its chunks in a single POST request
       try {
         const response = await fetch(uploadEndpoint, {
@@ -278,7 +148,6 @@
           headers: headers, // Metadata in headers
           body: formData,   // All file chunks in the body
         });
-
         if (response.ok) {
           statusDiv.innerHTML = `Upload complete for "${file.name}"!`;
         } else {
@@ -286,6 +155,54 @@
         }
       } catch (error) {
         statusDiv.innerHTML = `Error uploading file: ${error.message}`;
+      }
+    }
+    // ------------------------------
+    //   CGI FUNCTIONS
+    // ------------------------------
+    async function callCalculatorCGI() {
+      const input = document.getElementById('calcInput').value.trim();
+      if (!input) {
+        alert('Please provide input for the calculator.');
+        return;
+      }
+      const [num1, op, num2] = parseCalculationInput(input);
+      if (!num1 || !op || !num2) {
+        alert('Invalid input format. Use the format: num1 op num2 (e.g., 2+2).');
+        return;
+      }
+      try {
+        const response = await fetch(`http://localhost:8080/cgi-bin/calculator.py`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+          body: `num1=${num1}&num2=${num2}&op=${encodeURIComponent(op)}`
+        });
+        const text = await response.text();
+        document.getElementById('uploadStatus').innerHTML = text;
+      } catch (error) {
+        document.getElementById('uploadStatus').innerHTML = `Error: ${error.message}`;
+      }
+    }
+    function parseCalculationInput(input) {
+      const match = input.match(/(\d+)([+\-*/])(\d+)/);
+      return match ? [match[1], match[2], match[3]] : [];
+    }
+    async function callHelloCGI() {
+      const name = document.getElementById('helloInput').value.trim();
+      if (!name) {
+        alert('Please provide a name for the Hello CGI.');
+        return;
+      }
+      try {
+        const response = await fetch('http://localhost:8080/cgi-bin/hello.php', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+          body: `name=${encodeURIComponent(name)}`
+        });
+        const text = await response.text();
+        document.getElementById('uploadStatus').innerHTML = text;
+      } catch (error) {
+        document.getElementById('uploadStatus').innerHTML = `Error: ${error.message}`;
       }
     }
   </script>
