--- a/www/index.html
+++ b/www/index.html
@@ -194,7 +194,7 @@
         return;
       }
       try {
-        const response = await fetch('http://localhost:8080/cgi-bin/hello.php', {
+        const response = await fetch('http://localhost:8080/cgi/hello.php', {
           method: 'POST',
           headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
           body: `name=${encodeURIComponent(name)}`
