--- a/www/index.html
+++ b/www/index.html
@@ -175,7 +175,7 @@
         const response = await fetch(`http://localhost:8080/cgi-bin/calculator.py`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-          body: `num1=${num1}&num2=${num2}&op=${encodeURIComponent(op)}`
+          body: `num1=${num1}&num2=${num2}&op=${encodeURIComponent(op)}\r\n`
         });
         const text = await response.text();
         document.getElementById('uploadStatus').innerHTML = text;
@@ -197,7 +197,7 @@
         const response = await fetch('http://localhost:8080/cgi/hello.php', {
           method: 'POST',
           headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-          body: `name=${encodeURIComponent(name)}`
+          body: `name=${encodeURIComponent(name)}\r\n`
         });
         const text = await response.text();
         document.getElementById('uploadStatus').innerHTML = text;
