--- a/www/index.html
+++ b/www/index.html
@@ -108,7 +108,7 @@
     //   CHUNKED UPLOAD FUNCTION
     // ------------------------------
     const uploadEndpoint = "/upload-chunk"; // Adjust this to your actual server endpoint
-    const CHUNK_SIZE = 1024 * 256; // 512 KB for demo
+    const CHUNK_SIZE = 1024 * 1024; // 512 KB for demo
     let offset = 0;
     let file;
     let totalSize;
@@ -173,7 +173,7 @@
           headers: {
             'Content-Type': 'text/plain' // Sending raw text as the body
           },
-          body: input // Sending the input directly (e.g., "2+2")
+          body: input // Sending the raw input (e.g., "2+2")
         });
 
         if (!response.ok) {
@@ -194,11 +194,17 @@
         return;
       }
       try {
+        // Send `name` as the raw body
         const response = await fetch('http://localhost:8080/cgi/hello.php', {
           method: 'POST',
-          headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-          body: `name=${encodeURIComponent(name)}`
+          headers: {
+            'Content-Type': 'text/plain'
+          },
+          body: name
         });
+        if (!response.ok) {
+          throw new Error(`Server returned status ${response.status}`);
+        }
         const text = await response.text();
         alert(text);
       } catch (error) {
