--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
 <body>
   <h1>Welcome to the Main Page</h1>
 
+  <!-- COMMENT AREA (local only, no server calls) -->
   <div>
     <label for="name">Name:</label>
     <input type="text" id="name" placeholder="Enter your name" />
@@ -39,7 +40,10 @@
   <button onclick="addComment()">Submit Comment</button>
 
   <h2>Upload File (Chunked)</h2>
-  <p>We keep a "form-like" structure for user convenience, but we will NOT use the default submit. Instead, we'll handle the chunked upload via JavaScript.</p>
+  <p>
+    We keep a "form-like" structure for user convenience, but we will NOT use the default submit.
+    Instead, we'll handle the chunked upload via JavaScript.
+  </p>
   <div>
     <input type="file" id="fileInput" name="file" />
     <button onclick="uploadFileChunked()">Upload in Chunks</button>
@@ -51,6 +55,7 @@
     <label for="calcInput">Calculator Input:</label>
     <input type="text" id="calcInput" placeholder="e.g., 2+2" />
     <button onclick="callCalculatorCGI()">Calculate</button>
+    <br /><br />
     <label for="helloInput">Hello Input:</label>
     <input type="text" id="helloInput" placeholder="Enter your name" />
     <button onclick="callHelloCGI()">Say Hello</button>
@@ -60,9 +65,23 @@
   <div id="commentsContainer" class="comment-section"></div>
   <button onclick="goToLogPage()">Go to Log Page</button>
 
+  <!-- ============================= -->
+  <!--  NEW: Listing & Deleting Files -->
+  <!-- ============================= -->
+  <h2>File Management</h2>
+  <button onclick="fetchUploads()">List Uploaded Images</button>
+  <div id="uploadList"></div>
+
+  <hr />
+  <div>
+    <label for="deleteFileName">Delete Filename:</label>
+    <input type="text" id="deleteFileName" placeholder="Enter file name" />
+    <button onclick="deleteFile()">Delete File</button>
+  </div>
+
   <script>
     // ------------------------------
-    //   COMMENT FUNCTIONS
+    //   COMMENT FUNCTIONS (LOCAL ONLY)
     // ------------------------------
     const comments = [];
     function addComment() {
@@ -107,12 +126,13 @@
     // ------------------------------
     //   CHUNKED UPLOAD FUNCTION
     // ------------------------------
-    const uploadEndpoint = "/upload-chunk"; // Adjust this to your actual server endpoint
-    const CHUNK_SIZE = 1024 * 1024; // 512 KB for demo
+    const uploadEndpoint = "/upload-chunk"; // Adjust to your actual server endpoint
+    const CHUNK_SIZE = 1024 * 1024; // 1 MB for example
     let offset = 0;
     let file;
     let totalSize;
     let fileName;
+
     function uploadFileChunked() {
       const fileInput = document.getElementById("fileInput");
       if (!fileInput.files.length) {
@@ -127,12 +147,14 @@
       offset = 0;
       sendChunks();
     }
+
     async function sendChunks() {
       const statusDiv = document.getElementById("uploadStatus");
       const formData = new FormData();
       const headers = new Headers();
       headers.append("fileName", fileName);
       headers.append("totalSize", totalSize);
+
       while (offset < totalSize) {
         const start = offset;
         const end = Math.min(start + CHUNK_SIZE, totalSize);
@@ -173,13 +195,11 @@
           headers: {
             'Content-Type': 'text/plain' // Sending raw text as the body
           },
-          body: input // Sending the raw input (e.g., "2+2")
+          body: input // e.g., "2+2"
         });
-
         if (!response.ok) {
           throw new Error(`Server returned status ${response.status}`);
         }
-
         const result = await response.text();
         alert(`Result: ${result}`);
       } catch (error) {
@@ -194,7 +214,6 @@
         return;
       }
       try {
-        // Send `name` as the raw body
         const response = await fetch('http://localhost:8080/cgi/hello.php', {
           method: 'POST',
           headers: {
@@ -209,6 +228,59 @@
         alert(text);
       } catch (error) {
         alert(`Error: ${error.message}`);
+      }
+    }
+
+    // ------------------------------
+    //   NEW: LIST & DELETE FILES
+    // ------------------------------
+    async function fetchUploads() {
+      try {
+        // We'll do a GET request to "/list-uploads" (adjust if needed)
+        const response = await fetch('/list-uploads');
+        if (!response.ok) {
+          throw new Error(`Server error: ${response.status}`);
+        }
+        // Expect a JSON array of filenames
+        const fileList = await response.json();
+
+        const listDiv = document.getElementById('uploadList');
+        listDiv.innerHTML = ''; // Clear previous
+        if (fileList.length === 0) {
+          listDiv.innerHTML = '<p>No uploaded files found.</p>';
+        } else {
+          // Show them in a list
+          const ul = document.createElement('ul');
+          fileList.forEach(file => {
+            const li = document.createElement('li');
+            li.textContent = file;
+            ul.appendChild(li);
+          });
+          listDiv.appendChild(ul);
+        }
+      } catch (err) {
+        alert('Failed to list uploads: ' + err.message);
+      }
+    }
+
+    async function deleteFile() {
+      const filename = document.getElementById('deleteFileName').value.trim();
+      if (!filename) {
+        alert("Please enter a file name to delete.");
+        return;
+      }
+      try {
+        // We'll do DELETE /uploads/<filename>
+        const response = await fetch('/uploads/' + encodeURIComponent(filename), {
+          method: 'DELETE'
+        });
+        if (!response.ok) {
+          throw new Error(`Server responded with status ${response.status}`);
+        }
+        const text = await response.text();
+        alert("Delete result: " + text);
+      } catch (err) {
+        alert("Error deleting file: " + err.message);
       }
     }
   </script>
