--- a/www/index.html
+++ b/www/index.html
@@ -277,8 +277,8 @@
         if (!response.ok) {
           throw new Error(`Server responded with status ${response.status}`);
         }
-        const text = await response.text();
-        alert("Delete result: " + text);
+        // const text = await response.text();
+        // alert("Delete result: " + text);
       } catch (err) {
         alert("Error deleting file: " + err.message);
       }
