Fixed location method

--- a/www/index.html
+++ b/www/index.html
@@ -126,7 +126,7 @@
     // ------------------------------
     //   CHUNKED UPLOAD FUNCTION
     // ------------------------------
-    const uploadEndpoint = "/upload-chunk"; // Adjust to your actual server endpoint
+    const uploadEndpoint = "/uploads/"; // Adjust to your actual server endpoint
     const CHUNK_SIZE = 1024 * 1024; // 1 MB for example
     let offset = 0;
     let file;
