--- a/www/index.html
+++ b/www/index.html
@@ -203,7 +203,7 @@
           body: input // e.g., "2+2"
         });
         if (!response.ok) {
-          throw new Error(`Server returned status ${response.status}`);
+          /*UNCAUGHT*/ throw new Error(`Server returned status ${response.status}`);
         }
         const result = await response.text();
         alert(`Result: ${result}`);
@@ -228,7 +228,7 @@
           body: name
         });
         if (!response.ok) {
-          throw new Error(`Server returned status ${response.status}`);
+          /*UNCAUGHT*/ throw new Error(`Server returned status ${response.status}`);
         }
         const text = await response.text();
         alert(text);
@@ -250,7 +250,7 @@
           }
         });
         if (!response.ok) {
-          throw new Error(`Server error: ${response.status}`);
+          /*UNCAUGHT*/ throw new Error(`Server error: ${response.status}`);
         }
         // Expect a JSON array of filenames
         const fileList = await response.json();
@@ -286,7 +286,7 @@
           method: 'DELETE'
         });
         if (!response.ok) {
-          throw new Error(`Server responded with status ${response.status}`);
+          /*UNCAUGHT*/ throw new Error(`Server responded with status ${response.status}`);
         }
         // const text = await response.text();
         // alert("Delete result: " + text);
